--- a/src/styles/servico.css
+++ b/src/styles/servico.css
@@ -1,9 +1,9 @@
-#menu {
+#servico {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  padding-block: 200px;
 }
 
 #servicos {
